fix overflow problem

--- a/css/PixelPainter.css
+++ b/css/PixelPainter.css
@@ -50,6 +50,7 @@ body {
 .paint-grid {
   margin: auto;
   float: left;
+  width: 1000px;
 }
 
 .rows {
